--- a/index.html
+++ b/index.html
@@ -1,89 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/stye.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>Glotrico</title>
 </head>
-<body>
-<header class="header" id="header">
-    <nav class="left_nav">
-<div class="header_logo"><img src="images/Oval.png" alt=""><img src="images/Combined Shape Copy.png" alt=""></div>
-<div class="header_search">SEARCH<img src="images/icon.png" alt=""></div>
-    </nav>
-    <nav class="middle_nav">
-        <div class="direction col">
-            <img src="images/Location.png" alt="" height="30px" width="auto">
-            <p class="text_first_row">DIRECTION</p>
-            <p class="city">Kyiv</p>
-        </div>
-        <div class="checkin col">
-            <img src="images/Calendar.png" alt=""  height="30px" width="auto">
-            <p class="text_first_row">CHECK IN / OUT</p>
-            <p class="dates">Dec 12 <img src="images/arrow.png" alt=""> Dec 21</p>
-        </div>
-        <div class="options col">
-            <img src="images/Options.png" alt=""  height="30px" width="auto">
-            <p class="text_first_row">OPTIONS</p>
-            <p class="select">Select</p>
-        </div>
-        
-        <div class="mid_search"><img src="images/Iconsearch.png" alt=""></div> <!--это кнопка, что она делает?-->
-    </nav>
-    <nav class="right_nav">
-        <p class="p_login_registration">Login/<br>Registration</p>
-        <img src="images/Group 2 Copy.png" alt="" height="30px" width="auto">
-    </nav>
-</header>
-<main class="main" id="main">
-    <div class="first_row">
-        <div class="language"><img src="images/Language.png" alt=""></div>
-        <div class="travel_smarter"> 
-        <p id="travel">Travel</p>
-        <p id="smarter">smarter</p>
-        <button class="play_button"><figure class="triangular"></figure></button>
-    </div>
-    </div>
-    <div class="second_row">
-        <div class="container">
-            <p class="p_popular">Popular today</p>
-            
-        </div>
-        <div class="popular_cities">
-            <div class="city">
-                <img src="images/Bitmap.png" alt="" width="420px" height="280px">
-                <p class="city_name">Boston</p>
-                <p class="country_name">USA</p>
-            </div>
-            <div class="city">
-                <img src="images/Bitmapkoln.png" alt="" width="420px" height="280px">
-                <p class="city_name">Keln</p>
-                <p class="country_name">GERMANY</p>
-            </div>
-            <div class="city">
-                <img src="images/Bitmap.png" alt="" width="420px" height="280px">
-                <p class="city_name">Toronto</p>
-                <p class="country_name">CANADA</p>
-            </div>
-            <div class="city">
-                <img src="images/smallbitmap.png" alt="" width="90px" height="280px">
-            </div>
-        </div>
-        <div class="blue_arrows"><img src="images/left.png" alt=""><img src="images/right.png" alt="" ></div>
 
-    </div>
-<div class="third_row"><div class="container">
-    <div class="box1 content_box"></div>
-    <div class="box2 content_box"></div>
-    <div class="box3 content_box"></div>
-    <div class="box4 content_box"></div>
-</div>
-<footer class="footer" id="footer"></footer>
-</div>
-</main>
+<body>
+
+    <main>
+        <div class="first_row">
+            <div class="language">
+                <img src="images/Language.png" alt="">
+            </div>
+            <div class="travel_smarter">
+                <p id="travel">Travel</p>
+                <p id="smarter">smarter</p>
+                <button class="play_button">
+                    <figure class="triangular"></figure>
+                </button>
+            </div>
+        </div>
+        <div class="second_row">
+            <div class="max_width_container">
+                <p class="p_popular">Popular today</p>
+
+                <div class="popular_cities">
+                    <div class="city city1">
+                        <img src="images/Bitmap.png" alt="">
+                        <p class="city_name">Boston</p>
+                        <p class="country_name">USA</p>
+                    </div>
+                    <div class="city city2">
+                        <img src="images/Bitmapkoln.png" alt="">
+                        <p class="city_name">Keln</p>
+                        <p class="country_name">GERMANY</p>
+                    </div>
+                    <div class="city city3">
+                        <img src="images/Bitmap.png" alt="">
+                        <p class="city_name">Toronto</p>
+                        <p class="country_name">CANADA</p>
+                    </div>
+                    <div class="city city5">
+                        <img src="images/Bitmap.png" alt="">
+                        <p class="city_name">Toronto</p>
+                        <p class="country_name">CANADA</p>
+                    </div>
+                    <div class="city city4">
+                        <img class="bonus_city" src="images/smallbitmap.png" alt="">
+                    </div>
+
+                </div>
+                <div class="blue_arrows">
+                    <img src="images/left.png" alt=""><img src="images/right.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="third_row">
+            <div class="max_width_container">
+                <div class="get_inspected p_popular">Get inspected</div>
+                <div class="videos_container">
+                    <div class="solo_video video1">
+                        <div class="video_img"><img class="triangular_video" src="images/triangular.png" alt=""></div>
+                        <div class="face_description_video">
+                            <img src="images/face.png" alt="">
+                            <div class="video_description">
+                                <div class="v_name">Iceland 2020</div>
+                                <div class="person_name">Irina Kipa</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solo_video video2">
+                        <div class="video_img"><img class="triangular_video" src="images/triangular.png" alt=""></div>
+                        <div class="face_description_video">
+                            <img src="images/face.png" alt="">
+                            <div class="video_description">
+                                <div class="v_name">Norway Rush</div>
+                                <div class="person_name">Roman Si</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solo_video video3">
+                        <div class="video_img"><img class="triangular_video" src="images/triangular.png" alt=""></div>
+                        <div class="face_description_video">
+                            <img src="images/face.png" alt="">
+                            <div class="video_description">
+                                <div class="v_name">This is America</div>
+                                <div class="person_name">Alex Cooper</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solo_video video4">
+                        <div class="video_img"><img class="triangular_video" src="images/triangular.png" alt=""></div>
+                        <div class="face_description_video">
+                            <img src="images/face.png" alt="">
+                            <div class="video_description">
+                                <div class="v_name">Georgia grand tour</div>
+                                <div class="person_name">Julia Blox</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solo_video video5">
+                        <div class="video_img"><img class="triangular_video" src="images/triangular.png" alt=""></div>
+                        <div class="face_description_video">
+                            <img src="images/face.png" alt="">
+                            <div class="video_description">
+                                <div class="v_name">Irish Coast</div>
+                                <div class="person_name">Elena Phat</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solo_video video6">
+                        <div class="video_img"><img class="triangular_video" src="images/triangular.png" alt=""></div>
+                        <div class="face_description_video">
+                            <img src="images/face.png" alt="">
+                            <div class="video_description">
+                                <div class="v_name">Norway Rush</div>
+                                <div class="person_name">Roman Si</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solo_video video7">
+                        <div class="video_img"><img class="triangular_video" src="images/triangular.png" alt=""></div>
+                        <div class="face_description_video">
+                            <img src="images/face.png" alt="">
+                            <div class="video_description">
+                                <div class="v_name">Norway Rush</div>
+                                <div class="person_name">Roman Si</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="quote_block">
+                    <div class="trees"><img src="images/trees.png" alt=""></div>
+                    <div class="quote">The major cities in Norway are located along the coastline: the capital Oslo is Norway's largest city, with about 620.000 inhabitants.</div>
+                </div>
+                <hr class="third_row_hr">
+                <div class="text_block1">
+                    <div class="hello there">Hello there!</div>
+                    <div class="right_text_block">Tons of inspiration are waiting for you already. And you might be next one who will inspire others. Join our community today and create beautiful content with your friends.</div>
+                </div>
+                <div class="text_block2">
+                    <div class="hands_img_container"><img src="images/hands_phone.png" alt=""></div>
+                    <div class="log_reg_button_group"><button> Login / Registration <img src="images/Group_2_Copy.png" alt=""></button></div>
+                </div>
+            </div>
+        </div>
+
+        <footer></footer>
+
+    </main>
 </body>
+
 </html>
